# tatl

./: CLAUDE.md  Cargo.toml  INSTALL.md  README.md  test_abbrev
design/: Build_Checklist.md  Implement_31_CLI_Fixes.md  Outstanding_Items.md  Plan_02_Revision_1.md  Plan_03_Task_Deletion.md  Plan_04_Task_ID_Ranges_and_Lists.md  Plan_05_Invalid_Field_Token_Warnings.md  Plan_06_Task_Summary_Report.md  Plan_07_Enqueue_Abbreviation_Support.md  Plan_08_Enqueue_Help_Documentation.md  Plan_09_Missing_Help_Documentation.md  Plan_11_CLAP_Native_Grammar.md  Plan_12_User_Feedback.md  Plan_12_User_Feedback_Development_Plan.md  Plan_13_User_Feedback.md  Plan_13_User_Feedback_Development_Plan.md  Plan_14_User_Feedback.md  Plan_16_Time_Report.md  Plan_17_User_Feedback.md  Plan_17_User_Feedback_Design_Plan.md  Plan_18_Light_Frontend_Proposal.md  Plan_21_Rename_to_Tatl.md  Plan_22_CLI_Syntax_Review.md  Plan_23_Break_Capture_Workflow.md  Plan_24_Respawn_Model.md  Plan_29_sessions_report_filtering_and_external.md  Plan_30_reminders.md  Plan_31_CLI_Exploration_and_Issues.md  Plan_32_README_CLI_Deviations.md  Plan_33_Visibility.md  Plan_36_Color_By_Column.md  Plan_37_Windows_Support.md  Plan_38_On_Flag_Syntax_Consistency.md  Plan_39_CLI_Syntax_Consistency_And_Conventions.md  Plan_39b_CLI_Syntax_With_Equality_Operators.md  Plan_39c_CLI_Syntax_With_Pipe_Operator.md  Plan_39d_CLI_Syntax_Pipe_And_Equality.md  Plan_40_User_feedback.md  Plan_41_Task_Management_State_Model.md  Plan_42_Task_Stage_Migration_Assessment.md  (+9 more)
docs/: COMMAND_REFERENCE.md
src/: lib.rs  main.rs
tests/: acceptance_framework.rs  acceptance_framework_test.rs  acceptance_tests.rs  add_action_tests.rs  add_clock_in_tests.rs  add_project_creation_tests.rs  annotation_tests.rs  clock_interval_tests.rs  clock_list_tests.rs  clock_task_id_tests.rs  clock_tests.rs  close_tests.rs  color_tests.rs  date_time_tests.rs  done_filter_tests.rs  done_tests.rs  dst_tests.rs  (+33 more)
(+36 files in other folders)
