[package]
name = "tatl"
version = "0.2.0"
edition = "2021"
authors = ["Dallan Prince"]
description = "Task and Time Ledger - A powerful command-line task and time tracking tool"
license = "MIT"

[[bin]]
name = "tatl"
path = "src/main.rs"

[dependencies]
# Database
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging (for development)
env_logger = "0.11"
log = "0.4"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.0"
